update portfolio html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <!--header-section-->
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a href="./portfolio.html">Portfolio</a>
                 <ul>
                     <li><a href="">Studio</a></li>
                     <li><a href="">Portfolio</a></li>
@@ -25,78 +25,78 @@
             </address>
     </header>
     <main>
-        
+<!--filters-section-->
         <section>
-            <h1></h1>
+            <h1>Portfolio</h1>
             <ul>
-                <li><button></button></li>
-                <li><button></button></li>
-                <li><button></button></li>
-                <li><button></button></li>
-                <li><button></button></li>
+                <li><button type="button">All</button></li>
+                <li><button type="button">Web Site</button></li>
+                <li><button type="button">App</button></li>
+                <li><button type="button">Design</button></li>
+                <li><button type="button">Marketing</button></li>
             </ul>
             <ul>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/bankingapp.jpg">
+                        <img src="./images/bankingapp.jpg" alt="Banking App Interface Concept" width="360" height="300">
+                        <h2>Banking App Interface Concept</h2>
+                        <p>App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/cashless.jpg">
+                        <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
+                        <h2>Cashless Payment</h2>
+                        <p>Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/meditationapp.jpg">
+                        <img src="./images/meditationapp.jpg" alt="Meditation App" width="360" height="300">
+                        <h2>Meditation App</h2>
+                        <p>App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/taxiapp.jpg">
+                        <img src="./images/taxiapp.jpg" alt="Taxi Service" width="360" height="300">
+                        <h2>Taxi Service</h2>
+                        <p>Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/screnn.jpg">
+                        <img src="./images/screnn.jpg" alt="Screen Illustrations" width="360" height="300">
+                        <h2>Screen Illustrations</h2>
+                        <p>Design</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/onlinecourses.jpg">
+                        <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" height="300">
+                        <h2>Online Courses</h2>
+                        <p>Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/instagram.jpg">
+                        <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" height="300">
+                        <h2>Instagram Stories Concept</h2>
+                        <p>Design</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/organicfood.jpg">
+                        <img src="./images/organicfood.jpg" alt="Organic Food" width="360" height="300">
+                        <h2>Organic Food</h2>
+                        <p>Web Site</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
-                        <img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href="./images/freshcoffee.jpg">
+                        <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" height="300">
+                        <h2>Fresh Coffee</h2>
+                        <p>Web Site</p>
                     </a>
                 </li>
             </ul>
