--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,10 @@
     <!--header-section-->
     <header>
         <nav>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html">WEBSTUDIO</a>
                 <ul>
-                    <li><a href="">Studio</a></li>
-                    <li><a href="">Portfolio</a></li>
+                    <li><a href="./index.html">Studio</a></li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
                     <li><a href="">Contacts</a></li>
                 </ul>
             </nav>
@@ -27,7 +27,7 @@
     <main>
 <!--filters-section-->
         <section>
-            <h1>Portfolio</h1>
+            <h1 hidden>Portfolio</h1>
             <ul>
                 <li><button type="button">All</button></li>
                 <li><button type="button">Web Site</button></li>
