--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <!--header-section-->
-<header>
-    <nav>
-    <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+<header class="header">
+    <nav class="header-nav">
+    <a class="header-nav-link" href="./index.html">WebStudio</a>
+        <ul class="header-nav-list">
+            <li class="header-nav-item"><a href="./index.html">Studio</a></li>
+            <li class="header-nav-item"><a href="./portfolio.html">Portfolio</a></li>
+            <li class="header-nav-item"><a href="">Contacts</a></li>
         </ul>
     </nav>
-    <address>
+    <address class="header-contact">
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li class="header-contact-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-contact-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
 </header>
