--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,23 @@
     <!--header-section-->
     <header class="header">
         <nav class="header-nav">
-            <a class="header-nav-link" href="./index.html">WebStudio</a>
+            <a class="header-nav-link link" href="./index.html">WebStudio</a>
                 <ul class="header-nav-list">
-                    <li class="header-nav-item"><a href="./index.html">Studio</a></li>
-                    <li class="header-nav-item"><a href="./portfolio.html">Portfolio</a></li>
-                    <li class="header-nav-item"><a href="">Contacts</a></li>
+                    <li class="header-nav-item"><a class="link" href="./index.html">Studio</a></li>
+                    <li class="header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="header-nav-item"><a class="link" href="">Contacts</a></li>
                 </ul>
             </nav>
             <address class="header-contact">
                 <ul class="header-contact-list">
-                    <li class="header-contact-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="header-contact-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li class="header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
     </header>
     <main>
 <!--filters-section-->
-        <section>
+        <section class="section">
             <h1 hidden>Portfolio</h1>
             <ul>
                 <li><button type="button">All</button></li>
@@ -36,65 +36,68 @@
                 <li><button type="button">Design</button></li>
                 <li><button type="button">Marketing</button></li>
             </ul>
+            </section>
+            <!--card-section-->
+            <section class="section">
             <ul>
                 <li>
-                    <a href="./images/bankingapp.jpg">
+                    <a class="link" href="./images/bankingapp.jpg">
                         <img src="./images/bankingapp.jpg" alt="Banking App Interface Concept" width="360" height="300">
                         <h2>Banking App Interface Concept</h2>
                         <p>App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/cashless.jpg">
+                    <a class="link" href="./images/cashless.jpg">
                         <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
                         <h2>Cashless Payment</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/meditationapp.jpg">
+                    <a class="link" href="./images/meditationapp.jpg">
                         <img src="./images/meditationapp.jpg" alt="Meditation App" width="360" height="300">
                         <h2>Meditation App</h2>
                         <p>App</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/taxiapp.jpg">
+                    <a class="link" href="./images/taxiapp.jpg">
                         <img src="./images/taxiapp.jpg" alt="Taxi Service" width="360" height="300">
                         <h2>Taxi Service</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/screnn.jpg">
+                    <a class="link" href="./images/screnn.jpg">
                         <img src="./images/screnn.jpg" alt="Screen Illustrations" width="360" height="300">
                         <h2>Screen Illustrations</h2>
                         <p>Design</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/onlinecourses.jpg">
+                    <a class="link" href="./images/onlinecourses.jpg">
                         <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" height="300">
                         <h2>Online Courses</h2>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/instagram.jpg">
+                    <a class="link" href="./images/instagram.jpg">
                         <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" height="300">
                         <h2>Instagram Stories Concept</h2>
                         <p>Design</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/organicfood.jpg">
+                    <a class="link" href="./images/organicfood.jpg">
                         <img src="./images/organicfood.jpg" alt="Organic Food" width="360" height="300">
                         <h2>Organic Food</h2>
                         <p>Web Site</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./images/freshcoffee.jpg">
+                    <a class="link" href="./images/freshcoffee.jpg">
                         <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" height="300">
                         <h2>Fresh Coffee</h2>
                         <p>Web Site</p>
@@ -105,7 +108,7 @@
     </main>
     <!--footer-->
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a class="link" href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
