--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
 <!--header-section-->
-<header class="header">
-    <nav class="header-nav">
-    <a class="header-nav-link link" href="./index.html">WebStudio</a>
-        <ul class="header-nav-list">
-            <li class="header-nav-item"><a class="link" href="./index.html">Studio</a></li>
-            <li class="header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
-            <li class="header-nav-item"><a class="link" href="">Contacts</a></li>
+<header class="page-header">
+    <nav class="page-header-nav">
+    <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
+        <ul class="page-header-nav-list">
+            <li class="page-header-nav-item"><a class="link" href="./index.html">Studio</a></li>
+            <li class="page-header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="page-header-nav-item"><a class="link" href="">Contacts</a></li>
         </ul>
     </nav>
-    <address class="header-contact">
-        <ul class="header-contact-list">
-            <li class="header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="page-header-contact">
+        <ul class="page-header-contact-list">
+            <li class="page-header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="page-header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
 </header>
@@ -55,18 +55,18 @@
     </section>
     <!--portfolio-->
     <section class="portfolio section">
-        <h2 class="portfolio-titl">What are we doing</h2>
-        <ul class="portfolio-titl-list">
-            <li class="portfolio-titl-item"><img src="./images/img1(1).jpg" alt="desktop" width="360" height="300"></li>
-            <li class="portfolio-titl-item"><img src="./images/img2(1).jpg" alt="application" width="360" height="300"></li>
-            <li class="portfolio-titl-item"><img src="./images/img3(1).jpg" alt="smartphone" width="360" height="300"></li>
+        <h2 class="portfolio-title">What are we doing</h2>
+        <ul class="portfolio-title-list">
+            <li class="portfolio-title-item"><img src="./images/img1(1).jpg" alt="desktop" width="360" height="300"></li>
+            <li class="portfolio-title-item"><img src="./images/img2(1).jpg" alt="application" width="360" height="300"></li>
+            <li class="portfolio-title-item"><img src="./images/img3(1).jpg" alt="smartphone" width="360" height="300"></li>
         </ul>
     </section>
     <!--team-section-->
-    <section section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+    <section class="team section">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-title-list">
+            <li class="team-title-item">
                 <img width="264" height="260" src="./images/mark(1).jpg" alt="mark">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
