--- a/portfolio.html
+++ b/portfolio.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <!--header-section-->
-    <header class="header">
-        <nav class="header-nav">
-            <a class="header-nav-link link" href="./index.html">WebStudio</a>
-                <ul class="header-nav-list">
-                    <li class="header-nav-item"><a class="link" href="./index.html">Studio</a></li>
-                    <li class="header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
-                    <li class="header-nav-item"><a class="link" href="">Contacts</a></li>
+    <header class="page-header">
+        <nav class="page-header-nav">
+            <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
+                <ul class="page-header-nav-list">
+                    <li class="page-header-nav-item"><a class="link" href="./index.html">Studio</a></li>
+                    <li class="page-header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="page-header-nav-item"><a class="link" href="">Contacts</a></li>
                 </ul>
             </nav>
-            <address class="header-contact">
-                <ul class="header-contact-list">
-                    <li class="header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <address class="page-header-contact">
+                <ul class="page-header-contact-list">
+                    <li class="page-header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="page-header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
     </header>
