--- a/index.html
+++ b/index.html
@@ -1,98 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-<!--header-section-->
-<header class="page-header">
-    <nav class="page-header-nav">
-    <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
-        <ul class="page-header-nav-list">
-            <li class="page-header-nav-item"><a class="link" href="./index.html">Studio</a></li>
-            <li class="page-header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
-            <li class="page-header-nav-item"><a class="link" href="">Contacts</a></li>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <!--header-section-->
+    <header class="page-header">
+      <nav class="page-header-nav">
+        <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
+        <ul class="page-header-nav-list list">
+          <li class="page-header-nav-item">
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li class="page-header-nav-item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="page-header-nav-item">
+            <a class="link" href="">Contacts</a>
+          </li>
         </ul>
-    </nav>
-    <address class="page-header-contact">
-        <ul class="page-header-contact-list">
-            <li class="page-header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="page-header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      </nav>
+      <address class="page-header-contact">
+        <ul class="page-header-contact-list list">
+          <li class="page-header-contact-item">
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="page-header-contact-item">
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
-    </address>
-</header>
-<main>
-    <!--hero-->
-    <section class="hero section">
+      </address>
+    </header>
+    <main>
+      <!--hero-->
+      <section class="hero section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
-    </section>
-    <!--abaut-section-->
-    <section class="abaut section">
+      </section>
+      <!--abaut-section-->
+      <section class="abaut section">
         <h2 hidden>Our advantages</h2>
-        <ul class="abaut-list">
-            <li class="abaut-item">
-                <h3 class="abaut-title">Strategy</h3>
-                <p class="abaut-subtitle">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            </li>
-            <li class="abaut-item">
-                <h3 class="abaut-title">Punctuality</h3>
-                <p class="abaut-subtitle">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            </li>
-            <li class="abaut-item">
-                <h3 class="abaut-title">Diligence</h3>
-                <p class="abaut-subtitle">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            </li>
-            <li class="abaut-item">
-                <h3 class="abaut-title">Technologies</h3>
-                <p class="abaut-subtitle">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-            </li>
+        <ul class="abaut-list list">
+          <li class="abaut-item">
+            <h3 class="abaut-subtitle">Strategy</h3>
+            <p class="abaut-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="abaut-item">
+            <h3 class="abaut-subtitle">Punctuality</h3>
+            <p class="abaut-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="abaut-item">
+            <h3 class="abaut-subtitle">Diligence</h3>
+            <p class="abaut-text">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="abaut-item">
+            <h3 class="abaut-subtitle">Technologies</h3>
+            <p class="abaut-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
-    </section>
-    <!--portfolio-->
-    <section class="portfolio section">
+      </section>
+      <!--portfolio-->
+      <section class="portfolio section">
         <h2 class="portfolio-title">What are we doing</h2>
-        <ul class="portfolio-title-list">
-            <li class="portfolio-title-item"><img src="./images/img1(1).jpg" alt="desktop" width="360" height="300"></li>
-            <li class="portfolio-title-item"><img src="./images/img2(1).jpg" alt="application" width="360" height="300"></li>
-            <li class="portfolio-title-item"><img src="./images/img3(1).jpg" alt="smartphone" width="360" height="300"></li>
+        <ul class="portfolio-title-list list">
+          <li class="portfolio-title-item">
+            <img
+              src="./images/img1(1).jpg"
+              alt="desktop"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li class="portfolio-title-item">
+            <img
+              src="./images/img2(1).jpg"
+              alt="application"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li class="portfolio-title-item">
+            <img
+              src="./images/img3(1).jpg"
+              alt="smartphone"
+              width="360"
+              height="300"
+            />
+          </li>
         </ul>
-    </section>
-    <!--team-section-->
-    <section class="team section">
+      </section>
+      <!--team-section-->
+      <section class="team section">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-title-list">
-            <li class="team-title-item">
-                <img width="264" height="260" src="./images/mark(1).jpg" alt="mark">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-            </li>
-            <li>
-                <img width="264" height="260" src="./images/tom(1).jpg" alt="tom">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-            </li>
-            <li>
-                <img width="264" height="260" src="./images/camila(1).jpg" alt="camila">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-            </li>
-            <li>
-                <img width="264" height="260" src="./images/daniel(1).jpg" alt="daniel">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-            </li>
+        <ul class="team-title-list list">
+          <li class="team-title-item">
+            <img
+              class="team-title-img"
+              width="264"
+              height="260"
+              src="./images/mark(1).jpg"
+              alt="mark"
+            />
+            <h3 class="team-title-subtitle">Mark Guerrero</h3>
+            <p class="team-title-text">Product Designer</p>
+          </li>
+          <li class="team-title-item">
+            <img
+              class="team-title-img"
+              width="264"
+              height="260"
+              src="./images/tom(1).jpg"
+              alt="tom"
+            />
+            <h3 class="team-title-subtitle">Tom Ford</h3>
+            <p class="team-title-text">Frontend Developer</p>
+          </li>
+          <li class="team-title-item">
+            <img
+              class="team-title-img"
+              width="264"
+              height="260"
+              src="./images/camila(1).jpg"
+              alt="camila"
+            />
+            <h3 class="team-title-subtitle">Camila Garcia</h3>
+            <p class="team-title-text">Marketing</p>
+          </li>
+          <li class="team-title-item">
+            <img
+              class="team-title-img"
+              width="264"
+              height="260"
+              src="./images/daniel(1).jpg"
+              alt="daniel"
+            />
+            <h3 class="team-title-subtitle">Daniel Wilson</h3>
+            <p class="team-title-text">UI Designer</p>
+          </li>
         </ul>
-    </section>
-</main>
+      </section>
+    </main>
     <!--footer-->
-    <footer>
-        <a class="link" href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a class="footer-link link" href="./index.html">WebStudio</a>
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
