--- a/portfolio.html
+++ b/portfolio.html
@@ -1,115 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <!--header-section-->
     <header class="page-header">
-        <nav class="page-header-nav">
-            <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
-                <ul class="page-header-nav-list">
-                    <li class="page-header-nav-item"><a class="link" href="./index.html">Studio</a></li>
-                    <li class="page-header-nav-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
-                    <li class="page-header-nav-item"><a class="link" href="">Contacts</a></li>
-                </ul>
-            </nav>
-            <address class="page-header-contact">
-                <ul class="page-header-contact-list">
-                    <li class="page-header-contact-item"><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="page-header-contact-item"><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                </ul>
-            </address>
+      <nav class="page-header-nav">
+        <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
+        <ul class="page-header-nav-list list">
+          <li class="page-header-nav-item">
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li class="page-header-nav-item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="page-header-nav-item">
+            <a class="link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="page-header-contact">
+        <ul class="page-header-contact-list list">
+          <li class="page-header-contact-item">
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="page-header-contact-item">
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-<!--filters-section-->
-        <section class="section">
-            <h1 hidden>Portfolio</h1>
-            <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
-            </ul>
-            </section>
-            <!--card-section-->
-            <section class="section">
-            <ul>
-                <li>
-                    <a class="link" href="./images/bankingapp.jpg">
-                        <img src="./images/bankingapp.jpg" alt="Banking App Interface Concept" width="360" height="300">
-                        <h2>Banking App Interface Concept</h2>
-                        <p>App</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/cashless.jpg">
-                        <img src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
-                        <h2>Cashless Payment</h2>
-                        <p>Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/meditationapp.jpg">
-                        <img src="./images/meditationapp.jpg" alt="Meditation App" width="360" height="300">
-                        <h2>Meditation App</h2>
-                        <p>App</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/taxiapp.jpg">
-                        <img src="./images/taxiapp.jpg" alt="Taxi Service" width="360" height="300">
-                        <h2>Taxi Service</h2>
-                        <p>Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/screnn.jpg">
-                        <img src="./images/screnn.jpg" alt="Screen Illustrations" width="360" height="300">
-                        <h2>Screen Illustrations</h2>
-                        <p>Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/onlinecourses.jpg">
-                        <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" height="300">
-                        <h2>Online Courses</h2>
-                        <p>Marketing</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/instagram.jpg">
-                        <img src="./images/instagram.jpg" alt="Instagram Stories Concept" width="360" height="300">
-                        <h2>Instagram Stories Concept</h2>
-                        <p>Design</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/organicfood.jpg">
-                        <img src="./images/organicfood.jpg" alt="Organic Food" width="360" height="300">
-                        <h2>Organic Food</h2>
-                        <p>Web Site</p>
-                    </a>
-                </li>
-                <li>
-                    <a class="link" href="./images/freshcoffee.jpg">
-                        <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" height="300">
-                        <h2>Fresh Coffee</h2>
-                        <p>Web Site</p>
-                    </a>
-                </li>
-            </ul>
-        </section>
+      <!--filters-section-->
+      <section class="filter-section section">
+        <h1 hidden>Portfolio</h1>
+        <ul class="filter-section-list list">
+          <li class="filter-section-item">
+            <button class="filter-section-btn" type="button">All</button>
+          </li>
+          <li class="filter-section-item">
+            <button class="filter-section-btn" type="button">Web Site</button>
+          </li>
+          <li class="filter-section-item">
+            <button class="filter-section-btn" type="button">App</button>
+          </li>
+          <li class="filter-section-item">
+            <button class="filter-section-btn" type="button">Design</button>
+          </li>
+          <li class="filter-section-item">
+            <button class="filter-section-btn" type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <!--card-section-->
+      <section class="card-section section">
+        <ul class="card-section-list list">
+          <li class="card-section-item">
+            <a class="card-section-link link" href="./images/bankingapp.jpg">
+              <img
+                class="card-section-img"
+                src="./images/bankingapp.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Banking App Interface Concept</h2>
+              <p class="card-section-text">App</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/cashless.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/cashless.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Cashless Payment</h2>
+              <p class="card-section-text">Marketing</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/meditationapp.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/meditationapp.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Meditation App</h2>
+              <p class="card-section-text">App</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/taxiapp.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/taxiapp.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Taxi Service</h2>
+              <p class="card-section-text">Marketing</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/screnn.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/screnn.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Screen Illustrations</h2>
+              <p class="card-section-text">Design</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/onlinecourses.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/onlinecourses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Online Courses</h2>
+              <p class="card-section-text">Marketing</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/instagram.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/instagram.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Instagram Stories Concept</h2>
+              <p class="card-section-text">Design</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/organicfood.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/organicfood.jpg"
+                alt="Organic Food"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Organic Food</h2>
+              <p class="card-section-text">Web Site</p>
+            </a>
+          </li>
+          <li class="card-section-item">
+            <a
+              class="card-section-link link"
+              class="link"
+              href="./images/freshcoffee.jpg"
+            >
+              <img
+                class="card-section-img"
+                src="./images/freshcoffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="card-section-title">Fresh Coffee</h2>
+              <p class="card-section-text">Web Site</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--footer-->
-    <footer>
-        <a class="link" href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="page-footer">
+      <a class="page-footer-link link" href="./index.html">WebStudio</a>
+      <p class="page-footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
