--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!--header-section-->
     <header class="page-header">
       <nav class="page-header-nav">
@@ -46,8 +46,8 @@
     <main>
       <!--hero-->
       <section class="hero section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <h1 class="title">Effective Solutions for Your Business</h1>
+        <button class="btn" type="button">Order Service</button>
       </section>
       <!--abaut-section-->
       <section class="abaut section">
