--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!--header-section-->
     <header class="page-header">
       <nav class="page-header-nav">
@@ -49,19 +49,19 @@
         <h1 hidden>Portfolio</h1>
         <ul class="filter-section-list list">
           <li class="filter-section-item">
-            <button class="filter-section-btn" type="button">All</button>
+            <button class="btn" type="button">All</button>
           </li>
           <li class="filter-section-item">
-            <button class="filter-section-btn" type="button">Web Site</button>
+            <button class="btn" type="button">Web Site</button>
           </li>
           <li class="filter-section-item">
-            <button class="filter-section-btn" type="button">App</button>
+            <button class="btn" type="button">App</button>
           </li>
           <li class="filter-section-item">
-            <button class="filter-section-btn" type="button">Design</button>
+            <button class="btn" type="button">Design</button>
           </li>
           <li class="filter-section-item">
-            <button class="filter-section-btn" type="button">Marketing</button>
+            <button class="btn" type="button">Marketing</button>
           </li>
         </ul>
       </section>
