update style css

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,30 +15,34 @@
   </head>
   <body class="body">
     <!--header-section-->
-    <header class="page-header">
-      <nav class="page-header-nav">
-        <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
-        <ul class="page-header-nav-list list">
-          <li class="page-header-nav-item">
-            <a class="link" href="./index.html">Studio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo-link link" href="./index.html"
+          ><span class="web-logo">Web</span>Studio</a
+        >
+        <ul class="header-nav-list list">
+          <li class="header-nav-item">
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
-          <li class="page-header-nav-item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+          <li class="header-nav-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="page-header-nav-item">
-            <a class="link" href="">Contacts</a>
+          <li class="header-nav-item">
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="page-header-contact">
-        <ul class="page-header-contact-list list">
-          <li class="page-header-contact-item">
-            <a class="link" href="mailto:info@devstudio.com"
+      <address class="header-contact">
+        <ul class="header-contact-list list">
+          <li class="header-contact-item">
+            <a class="header-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="page-header-contact-item">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-contact-item">
+            <a class="header-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -49,19 +53,25 @@
         <h1 hidden>Portfolio</h1>
         <ul class="filter-section-list list">
           <li class="filter-section-item">
-            <button class="btn" type="button">All</button>
+            <button class="btn btn:hover" type="button">All</button>
           </li>
           <li class="filter-section-item">
-            <button class="btn" type="button">Web Site</button>
+            <button class="btn-cloud btn-cloud:hover" type="button">
+              Web Site
+            </button>
           </li>
           <li class="filter-section-item">
-            <button class="btn" type="button">App</button>
+            <button class="btn-cloud btn-cloud:hover" type="button">App</button>
           </li>
           <li class="filter-section-item">
-            <button class="btn" type="button">Design</button>
+            <button class="btn-cloud btn-cloud:hover" type="button">
+              Design
+            </button>
           </li>
           <li class="filter-section-item">
-            <button class="btn" type="button">Marketing</button>
+            <button class="btn-cloud btn-cloud:hover" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
       </section>
@@ -82,11 +92,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/cashless.jpg"
-            >
+            <a class="card-section-link link" href="./images/cashless.jpg">
               <img
                 class="card-section-img"
                 src="./images/cashless.jpg"
@@ -99,11 +105,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/meditationapp.jpg"
-            >
+            <a class="card-section-link link" href="./images/meditationapp.jpg">
               <img
                 class="card-section-img"
                 src="./images/meditationapp.jpg"
@@ -116,11 +118,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/taxiapp.jpg"
-            >
+            <a class="card-section-link link" href="./images/taxiapp.jpg">
               <img
                 class="card-section-img"
                 src="./images/taxiapp.jpg"
@@ -133,11 +131,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/screnn.jpg"
-            >
+            <a class="card-section-link link" href="./images/screnn.jpg">
               <img
                 class="card-section-img"
                 src="./images/screnn.jpg"
@@ -150,11 +144,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/onlinecourses.jpg"
-            >
+            <a class="card-section-link link" href="./images/onlinecourses.jpg">
               <img
                 class="card-section-img"
                 src="./images/onlinecourses.jpg"
@@ -167,11 +157,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/instagram.jpg"
-            >
+            <a class="card-section-link link" href="./images/instagram.jpg">
               <img
                 class="card-section-img"
                 src="./images/instagram.jpg"
@@ -184,11 +170,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/organicfood.jpg"
-            >
+            <a class="card-section-link link" href="./images/organicfood.jpg">
               <img
                 class="card-section-img"
                 src="./images/organicfood.jpg"
@@ -201,11 +183,7 @@
             </a>
           </li>
           <li class="card-section-item">
-            <a
-              class="card-section-link link"
-              class="link"
-              href="./images/freshcoffee.jpg"
-            >
+            <a class="card-section-link link" href="./images/freshcoffee.jpg">
               <img
                 class="card-section-img"
                 src="./images/freshcoffee.jpg"
@@ -221,9 +199,11 @@
       </section>
     </main>
     <!--footer-->
-    <footer class="page-footer">
-      <a class="page-footer-link link" href="./index.html">WebStudio</a>
-      <p class="page-footer-text">
+    <footer class="footer">
+      <a class="logo-link link" href="./index.html"
+        ><span class="web-logo">Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
