--- a/index.html
+++ b/index.html
@@ -15,30 +15,34 @@
   </head>
   <body class="body">
     <!--header-section-->
-    <header class="page-header">
-      <nav class="page-header-nav">
-        <a class="page-header-nav-link link" href="./index.html">WebStudio</a>
-        <ul class="page-header-nav-list list">
-          <li class="page-header-nav-item">
-            <a class="link" href="./index.html">Studio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo-link link" href="./index.html"
+          ><span class="web-logo">Web</span>Studio</a
+        >
+        <ul class="header-nav-list list">
+          <li class="header-nav-item">
+            <a class="heder-link link" href="./index.html">Studio</a>
           </li>
-          <li class="page-header-nav-item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+          <li class="header-nav-item">
+            <a class="heder-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="page-header-nav-item">
-            <a class="link" href="">Contacts</a>
+          <li class="header-nav-item">
+            <a class="heder-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="page-header-contact">
-        <ul class="page-header-contact-list list">
-          <li class="page-header-contact-item">
-            <a class="link" href="mailto:info@devstudio.com"
+      <address class="header-contact">
+        <ul class="header-contact-list list">
+          <li class="header-contact-item">
+            <a class="heder-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="page-header-contact-item">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="header-contact-item">
+            <a class="heder-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -47,7 +51,7 @@
       <!--hero-->
       <section class="hero section">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">Order Service</button>
+        <button class="btn btn:hover" type="button">Order Service</button>
       </section>
       <!--abaut-section-->
       <section class="abaut section">
@@ -166,7 +170,9 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="footer-link link" href="./index.html">WebStudio</a>
+      <a class="logo-link link" href="./index.html"
+        ><span class="web-logo">Web</span>Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
