--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="heder-link link" href="./index.html">Studio</a>
+            <a class="desc desc:hover link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="heder-link link" href="./portfolio.html">Portfolio</a>
+            <a class="desc desc:hover link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-nav-item">
-            <a class="heder-link link" href="">Contacts</a>
+            <a class="desc desc:hover link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="heder-link link" href="mailto:info@devstudio.com"
+            <a class="desc desc:hover link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
