--- a/portfolio.html
+++ b/portfolio.html
@@ -22,13 +22,13 @@
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="header-link link" href="./index.html">Studio</a>
+            <a class="desc desc:hover link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+            <a class="desc desc:hover link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-nav-item">
-            <a class="header-link link" href="">Contacts</a>
+            <a class="desc desc:hover link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
