update style css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="desc desc:hover link" href="mailto:info@devstudio.com"
+            <a class="heder-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
