--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
             <a class="desc desc:hover link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover link" href="./portfolio.html">Portfolio</a>
+            <a class="desc desc:hover link" href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
           <li class="header-nav-item">
             <a class="desc desc:hover link" href="">Contacts</a>
@@ -35,12 +37,16 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="header-contact header-contact:hover link" href="mailto:info@devstudio.com"
+            <a
+              class="header-contact header-contact:hover link"
+              href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-contact header-contact:hover link" href="tel:+110001111111"
+            <a
+              class="header-contact header-contact:hover link"
+              href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
