update style css

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -18,11 +18,13 @@
     <header class="header">
       <nav class="header-nav">
         <a class="logo-link link" href="./index.html"
-          ><span class="web-logo">Web</span>Studio</a
+          >Web<span class="logo-link-blue">Studio</span></a
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="desc desc:hover link" href="./index.html">Studio</a>
+            <a class="desc desc:hover desc:focus link" href="./index.html"
+              >Studio</a
+            >
           </li>
           <li class="header-nav-item">
             <a class="desc desc:hover link" href="./portfolio.html"
@@ -38,7 +40,7 @@
         <ul class="header-contact-list list">
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover link"
+              class="header-contact header-contact:hover header-contact:focus link"
               href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
@@ -206,8 +208,8 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="logo-link-cloud link" href="./index.html"
-        ><span class="web-logo">Web</span>Studio</a
+      <a class="logo-link link" href="./index.html"
+        >Web<span class="logo-link-cloud">Studio</span></a
       >
       <p class="p-text-cloud">
         Increase the flow of customers and sales for your business with digital
