update style css

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,17 +22,17 @@
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="desc desc:hover desc:focus link" href="./index.html"
+            <a class="desc link" href="./index.html"
               >Studio</a
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover desc:focus link" href="./portfolio.html"
+            <a class="desc link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover desc:focus link" href="">Contacts</a>
+            <a class="desc link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -40,14 +40,14 @@
         <ul class="header-contact-list list">
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover header-contact:focus link"
+              class="header-contact link"
               href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover header-contact:focus link"
+              class="header-contact link"
               href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
@@ -62,7 +62,7 @@
         <ul class="filter-section-list list">
           <li class="filter-section-item">
             <button
-              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              class="btn-cloud"
               type="button"
             >
               All
@@ -70,7 +70,7 @@
           </li>
           <li class="filter-section-item">
             <button
-              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              class="btn-cloud"
               type="button"
             >
               Web Site
@@ -78,7 +78,7 @@
           </li>
           <li class="filter-section-item">
             <button
-              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              class="btn-cloud"
               type="button"
             >
               App
@@ -86,7 +86,7 @@
           </li>
           <li class="filter-section-item">
             <button
-              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              class="btn-cloud"
               type="button"
             >
               Design
@@ -94,7 +94,7 @@
           </li>
           <li class="filter-section-item">
             <button
-              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              class="btn-cloud"
               type="button"
             >
               Marketing
