--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <ul class="header-contact-list list">
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover header-contact:focus link"
+              class="header-contact link"
               href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover header-contact:focus link"
+              class="header-contact link"
               href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
@@ -59,7 +59,7 @@
       <!--hero-->
       <section class="hero-section">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn btn:hover btn:focus" type="button">
+        <button class="btn" type="button">
           Order Service
         </button>
       </section>
