update style css

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,10 @@
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="desc link" href="./index.html"
-              >Studio</a
-            >
+            <a class="desc link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="desc link" href="./portfolio.html"
-              >Portfolio</a
-            >
+            <a class="desc link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-nav-item">
             <a class="desc link" href="">Contacts</a>
@@ -39,16 +35,12 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a
-              class="header-contact link"
-              href="mailto:info@devstudio.com"
+            <a class="header-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a
-              class="header-contact link"
-              href="tel:+110001111111"
+            <a class="header-contact link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -61,44 +53,19 @@
         <h1 hidden>Portfolio</h1>
         <ul class="filter-section-list list">
           <li class="filter-section-item">
-            <button
-              class="btn-cloud"
-              type="button"
-            >
-              All
-            </button>
+            <button class="btn-cloud" type="button">All</button>
           </li>
           <li class="filter-section-item">
-            <button
-              class="btn-cloud"
-              type="button"
-            >
-              Web Site
-            </button>
+            <button class="btn-cloud" type="button">Web Site</button>
           </li>
           <li class="filter-section-item">
-            <button
-              class="btn-cloud"
-              type="button"
-            >
-              App
-            </button>
+            <button class="btn-cloud" type="button">App</button>
           </li>
           <li class="filter-section-item">
-            <button
-              class="btn-cloud"
-              type="button"
-            >
-              Design
-            </button>
+            <button class="btn-cloud" type="button">Design</button>
           </li>
           <li class="filter-section-item">
-            <button
-              class="btn-cloud"
-              type="button"
-            >
-              Marketing
-            </button>
+            <button class="btn-cloud" type="button">Marketing</button>
           </li>
         </ul>
         <!--card-section-->
