--- a/index.html
+++ b/index.html
@@ -22,14 +22,10 @@
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="desc link" href="./index.html"
-              >Studio</a
-            >
+            <a class="desc link" href="./index.html">Studio</a>
           </li>
           <li class="header-nav-item">
-            <a class="desc link" href="./portfolio.html"
-              >Portfolio</a
-            >
+            <a class="desc link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="header-nav-item">
             <a class="desc link" href="">Contacts</a>
@@ -39,16 +35,12 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a
-              class="header-contact link"
-              href="mailto:info@devstudio.com"
+            <a class="header-contact link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a
-              class="header-contact link"
-              href="tel:+110001111111"
+            <a class="header-contact link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -59,12 +51,10 @@
       <!--hero-->
       <section class="hero-section">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">
-          Order Service
-        </button>
+        <button class="btn" type="button">Order Service</button>
       </section>
       <!--abaut-section-->
-      <section class="abaut section">
+      <section>
         <h2 hidden>Our advantages</h2>
         <ul class="abaut-list list">
           <li class="abaut-item">
